--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +19,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".About"
+            android:label="About"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".Information"
+            android:label="Information"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".MapClass"
+            android:label="Map"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+
     </application>
 
 </manifest>
