--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "muaz_limkok.fashionclub"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -25,6 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.android.support:cardview-v7:23.1.1'
 }
