--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
