--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,8 @@ dependencies {
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.google.android.gms:play-services:8.4.0'
+
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.8@aar') {
+        transitive = true
+    }
 }
